[gd_scene load_steps=15 format=3 uid="uid://c6foreds377yq"]

[ext_resource type="Script" path="res://script/death_screen.gd" id="1_4g5qg"]
[ext_resource type="AudioStream" uid="uid://fqcm34a8mn8s" path="res://music/death_music.ogg" id="2_vb4cu"]

[sub_resource type="LabelSettings" id="LabelSettings_dpgr2"]
font_size = 128
font_color = Color(1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_u1yhk"]
font_size = 128
font_color = Color(1, 0, 0, 0)

[sub_resource type="Theme" id="Theme_f78y8"]
default_font_size = 64

[sub_resource type="InputEventKey" id="InputEventKey_586vs"]
device = -1
keycode = 4194309

[sub_resource type="InputEventKey" id="InputEventKey_jao8u"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_pwmk2"]
events = [SubResource("InputEventKey_586vs"), SubResource("InputEventKey_jao8u")]

[sub_resource type="LabelSettings" id="LabelSettings_pf0v3"]
font_size = 32
font_color = Color(1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_ys0oo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/YOUDIED:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/RetryButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/RetryButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/BottomTextLocation/BottomText:label_settings:font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LifeDisplay:label_settings:font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LifeDisplay:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(596, 453)]
}

[sub_resource type="Animation" id="Animation_qtqro"]
resource_name = "death_animation"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/YOUDIED:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/RetryButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/RetryButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/BottomTextLocation/BottomText:label_settings:font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nmamf"]
resource_name = "life_deplete"
length = 1.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LifeDisplay:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.85, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LifeDisplay:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(578.5, 452.5), Vector2(554, 446), Vector2(617, 491), Vector2(628, 430), Vector2(578.5, 452.5)]
}

[sub_resource type="Animation" id="Animation_6ichg"]
resource_name = "life_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LifeDisplay:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vpm88"]
_data = {
"RESET": SubResource("Animation_ys0oo"),
"death_animation": SubResource("Animation_qtqro"),
"life_deplete": SubResource("Animation_nmamf"),
"life_fade_in": SubResource("Animation_6ichg")
}

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4g5qg")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LifeDisplay" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.0
offset_top = -87.0
offset_right = 399.0
offset_bottom = 88.0004
grow_horizontal = 2
grow_vertical = 2
text = "Lives left: x"
label_settings = SubResource("LabelSettings_dpgr2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="YOUDIED" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "YOU DIED"
label_settings = SubResource("LabelSettings_u1yhk")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="RetryButton" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = SubResource("Theme_f78y8")
shortcut = SubResource("Shortcut_pwmk2")
shortcut_in_tooltip = false
text = "Retry"

[node name="BottomTextLocation" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="BottomText" type="Label" parent="VBoxContainer/BottomTextLocation"]
layout_mode = 2
offset_top = 256.0
offset_right = 603.0
offset_bottom = 301.0
text = "Test"
label_settings = SubResource("LabelSettings_pf0v3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vpm88")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vb4cu")
autoplay = true

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
